fix: product hero align

--- a/src/containers/Product/component/SectionHero/SectionHero.module.scss
+++ b/src/containers/Product/component/SectionHero/SectionHero.module.scss
@@ -22,7 +22,9 @@
 }
 
 .heading {
-  text-align: center;
+  @include b-d(lg) {
+    text-align: center;
+  }
 }
 
 .colLeft {
